fixed blog post spacing for mobile

--- a/src/components/blogPostPage/blogPostPage.css
+++ b/src/components/blogPostPage/blogPostPage.css
@@ -21,6 +21,7 @@
   justify-content: center;
   align-items: flex-start;
   margin-top: 80vh;
+  margin-top: 80svh;
   margin-bottom: 10vh;
 }
 
